# trading_bot_0

./: .gitignore  Cargo.toml  FOUND_ISSUES.md  READINGS.md  README.md  README_MONOREPO.md  REORGANIZATION_SUMMARY.md  ai_prompt_mamba  build.rs  weight_layers.txt  weights_by_id.txt
benchmark_results/: bench_20260112_070055.json  bench_20260112_070216.json  bench_20260112_070256.json  bench_20260112_070301.json  bench_20260112_070305.json  bench_20260112_070555.json  latest.json
benchmarks/: Cargo.toml  README.md  build.rs  mamba_compare.py
benchmarks/benchmark_results/: latest.json
benchmarks/src/: main.rs  optim_grid.rs  optim_loss.rs  optim_transformer.rs  results.rs
docs/future/: uncertainty_weighted_advantages.md
report_cli/: Cargo.toml  README.md
report_cli/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  report.rs  run_dir.rs  theme.rs
src/: constants.rs  main.rs  types.rs  utils.rs
src/agent/: create.rs  mod.rs  train.rs
src/burn/: action.rs  check.rs  constants.rs  conv.rs  env.rs  linear.rs  linear_ppo.rs  mod.rs  obs_state.rs  train.rs
src/charts/: general.rs  mod.rs
src/custom_rl/: mod.rs  train.rs
trading_bots/: Cargo.toml  build.rs  run-release-cuda.sh
trading_bots/benchmark_results/: bench_20260112_070127.json  latest.json
trading_bots/cuda_ops/: gen_wrapper.py  mamba_fused_ops.cpp  mamba_fused_ops.cu
trading_bots/cuda_ops/triton/: rmsnorm.cu  selective_state_update.cu  ssd_bmm.cu  ssd_chunk_scan.cu  ssd_chunk_state.cu  ssd_combined.cu  ssd_common.cuh  ssd_state_passing.cu
trading_bots/docs/: architecture_review_kl.md  bidirectional_pma_readout_spec.md  causal_pooling_readout_spec.md  meta_architecture_review_kl.md
trading_bots/mamba2_ref/: bridge.py
trading_bots/mamba2_ref/mamba_ssm/: __init__.py
trading_bots/mamba2_ref/mamba_ssm/modules/: mamba2.py
trading_bots/mamba2_ref/mamba_ssm/ops/triton/: ssd_combined.py  ssd_state_passing.py
trading_bots/src/: constants.rs  lib.rs  main.rs  types.rs  utils.rs
trading_bots/src/agent/: create.rs  mod.rs  runner.rs  train.rs
trading_bots/src/burn/: conv.rs  env.rs  mod.rs
trading_bots/src/burn/agent/base/: environment.rs  memory.rs
trading_bots/src/burn/agent/ppo/: agent.rs  config.rs  model.rs
trading_bots/src/burn/agent/utils/: mod.rs
trading_bots/src/candle/: mod.rs  rocm_check.rs
trading_bots/src/charts/: action.rs  candle.rs  data_analysis.rs  general.rs  mod.rs  multi_line.rs  simple.rs  trading.rs  utils.rs
trading_bots/src/custom_rl/: check.rs  mod.rs  train.rs
trading_bots/src/data/: historical.rs  macro_econ.rs  mod.rs  universe.rs
trading_bots/src/data/earnings/: alpha_vantage.rs  finnhub.rs  fmp.rs  mod.rs
trading_bots/src/genetic/: backtest.rs  engine.rs  family.rs  logging.rs  metrics.rs  mod.rs  tickers.rs
trading_bots/src/genetic/families/: mod.rs  price_rebound.rs  rsi_rebound.rs  trend_breakout.rs
trading_bots/src/gym/: action_continuous.rs  action_discrete.rs
trading_bots/src/gym/base/: action.rs  agent.rs  environment.rs
trading_bots/src/history/: episode_tickers_combined.rs  episode_tickers_separate.rs  meta_tickers_combined.rs  meta_tickers_separate.rs  mod.rs  report.rs
trading_bots/src/neural_net/: create.rs  mod.rs  train_genetic.rs  train_qlearning.rs
trading_bots/src/strategies/: basic.rs  basic_nn.rs  combined.rs  mod.rs  price_rebound.rs  price_rl.rs  rsi_rebound.rs
trading_bots/src/torch/: action_space.rs  constants.rs  cuda_cfg.rs  cuda_graph.rs  ensemble.rs  fp32_adam.rs  gym_env.rs  hl_gauss.rs  hl_gauss_tests.rs  ibkr_infer.rs  infer.rs  load.rs  mamba_fused.rs  mod.rs  model.rs  muon.rs  muon_tests.rs  ppo.rs  ppo_tests.rs  sdp.rs  ssm.rs  ssm_ref.rs  ssm_tests.rs  step.rs  stream_tests.rs  two_hot.rs  two_hot_tests.rs  vec_gym_env.rs
trading_bots/src/torch/cuda/: cfg.rs  mod.rs
trading_bots/src/torch/env/: earnings.rs  env.rs  lifecycle.rs  macro_ind.rs  mod.rs  momentum.rs  obs.rs  reward.rs  reward_experiments.rs  single.rs  step.rs  trade.rs  trade_experiments.rs  vec_env.rs
trading_bots/src/torch/env/vec/: batch.rs  core.rs  mod.rs  reset.rs  step.rs
trading_bots/src/torch/infer/: mod.rs  offline.rs
trading_bots/src/torch/infer/ibkr/: execute.rs  mod.rs  runner.rs  state.rs  status.rs  sync.rs
trading_bots/src/torch/model/: config.rs  forward.rs  head.rs  inference.rs  init.rs  mod.rs  rmsnorm.rs  rope.rs  trading_model.rs
trading_bots/src/torch/model/blocks/: cross_attn.rs  endogenous.rs  exogenous.rs  ffn.rs  gqa.rs  mod.rs  pma.rs  readout.rs
trading_bots/src/torch/model/stream/: cache.rs  live.rs  mod.rs  probe.rs  replay.rs  state.rs
trading_bots/src/torch/optim/: mod.rs  muon.rs
trading_bots/src/torch/train/: advantages.rs  config.rs  cuda_graph_minibatch.rs  gae.rs  geometry.rs  log.rs  loop_.rs  mod.rs  numeric_debug.rs  optimizer_glue.rs  pmpo.rs  rollout.rs  sample.rs  trainer.rs  update.rs  value_loss.rs
trading_bots/src/torch/value/: hl_gauss.rs  mod.rs
trading_bots/tests/: genetic_integration.rs
training_log_server/: Cargo.toml
tui/: Cargo.toml
tui/src/: chart_viewer.rs  main.rs  report_renderer.rs  theme.rs
tui/src/components/: episode_status.rs  mod.rs
tui/src/components/dialogs/: base.rs  confirm.rs  inference.rs  mod.rs  page_jump.rs  run_selector.rs  weights.rs
tui/src/pages/: generation_browser.rs  inference_browser.rs  logs_page.rs  main_page.rs  mod.rs  model_observations_page.rs
tui/src/state/: generation_browser.rs  inference_browser.rs  logs_page.rs  mod.rs  process_manager.rs
tui/src/utils/: clipboard.rs  layout.rs  mod.rs
weights/: weights.js  weights.txt
(+10049 files in other folders)
