[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
trading_bot_0 = { path = "../trading_bots" }
tch = { version = "0.23.0", features = ["download-libtorch"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
