[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", optional = true }
plotters = { version = "0.3.7", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
ratatui = ["dep:ratatui"]
plotters = ["dep:plotters"]
