[package]
name = "trading_bot_0"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A trading bot using machine learning and genetic algorithms, working with the IBKR API"
repository = "https://github.com/CarsonBurke/trading_bot_0"
keywords = ["trading", "finance", "deep-learning", "machine-learning"]
categories = ["science"]

[dependencies]
shared = { path = "../shared", features = ["plotters"] }
anyhow = "1.0.98"
# conflicts with torch > 0.19, have to disable for torch variant
# burn = {version = "0.18.0", features = ["wgpu", "rocm", "cuda", "ndarray", "autodiff", "vulkan", "fusion"]}
candle-core = { version = "0.9.1" }
candle-nn = {version = "0.9.1" }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
cpython = "0.7.2"
enum-map = { version = "2.7.3", features = ["serde"] }
hashbrown = "0.15.2"
ibapi = { version = "2.2.2", default-features = false, features = ["sync"] }
image = { version = "0.25", features = ["webp"] }
libc = "0.2"
libloading = "0.8.6"
nvml-wrapper = "0.11"
ndarray = "0.16.1"
ordered-float = "4.5.0"
plotters = { version = "0.3.7", features = ["bitmap_encoder"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ringbuffer = "0.16.0"
rust_neural_network = "0.18.0"
serde = "1.0.228"
serde_json = "1.0"
tch = { version = "0.22.0", features = ["rl-python", "download-libtorch"] }
time = "0.3.36"
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }

[features]
default = ["debug_training"]
debug_training = []

[build-dependencies]
serde_json = "1.0"
tch = { version = "0.22.0", features = ["download-libtorch"] }

[profile.release]
debug = 1

# [rust]
# debuginfo-level = 1
