[package]
name = "trading-bot-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["ratatui"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["webp"] }
ratatui-image = "1.0"
walkdir = "2.5"
